feat: basic layout with styles

--- a/Week-2/week2/index.html
+++ b/Week-2/week2/index.html
@@ -1,13 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Week-2</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Week-2</title>
+  </head>
+  <body>
+    <div class="main">
+      <div class="container">
+        <header>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </header>
+        <section>
+          <div>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book.
+          </div>
+          <div>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley of type
+            and scrambled it to make a type specimen book.
+          </div>
+        </section>
+        <section class="justify-center wrap">
+          <div class="hero_image">
+            <img src="../assets/image.jpg" alt="playground"/>
+          </div>
+          <div class="article">
+            <article>
+              <h4>Lorem ipsum dolor sit amet</h4>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book.
+              </p>
+              <a href="https://www.pesto.tech/become-a-developer">Visit</a>
+            </article>
+            <article>
+              <h4>Lorem ipsum dolor sit amet</h4>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book.
+              </p>
+              <a href="https://www.pesto.tech/become-a-developer">Visit</a>
+            </article>
+            <article>
+              <h4>Lorem ipsum dolor sit amet</h4>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book.
+              </p>
+              <a href="https://www.pesto.tech/become-a-developer">Visit</a>
+            </article>
+        </section>
+        <div class="form_container">
+          <form>
+            <div class="form_input">
+            <label>
+              Title
+              <input type="radio"/>
+              Mr.
+            </label> 
+            <label>
+              <input type="radio"/>
+              Mrs.
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              First Name
+              <input type="text"/>
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              Last Name
+              <input type="text"/>
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              Email
+              <input type="email"/>
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              Phone Number
+              <input type="tel"/>
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              Password
+              <input type="password"/>
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              Confirm Password
+              <input type="password"/>
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              Country
+              <select name="country" id="country">
+                <option>India</option>
+                <option>Canada</option>
+                <option>Australia</option>
+                <option>Switzerland</option>
+                <option>New Zealand</option>
+              </select>
+            </label>
+          </div>
+          <div class="form_input">
+            <label>
+              <input type="checkbox"/>
+              I agree to the <a href="www.google.com">terms and conditions</a>
+            </label>
+          </div>
+          <input type="submit"/>
+        </form>
+      </div>
+      </div>
+    </div>
+  </body>
 </html>
