--- a/Week-2/week2/index.html
+++ b/Week-2/week2/index.html
@@ -14,13 +14,13 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </header>
         <section>
-          <div>
+          <div class="text_content">
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text
             ever since the 1500s, when an unknown printer took a galley of type
             and scrambled it to make a type specimen book.
           </div>
-          <div>
+          <div class="text_content">
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text
             ever since the 1500s, when an unknown printer took a galley of type
